# roadline

./: .ltex-ls-plus.json  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.githooks/: commit-msg
.githooks/lib-commit-msg/: build-site-if
.githooks/lib-pre-commit/: build-site-if
.github/workflows/: deploy-preview.yml  deploy.yml  nix-command.yml  pages-release.yml
core/: README.md
core/parser/markdown/: Cargo.toml
core/parser/markdown/examples/: backward_compatibility.rs  basic_usage.rs
core/parser/markdown/src/: date.rs  dependency.rs  error.rs  instrument.rs  lib.rs  parser.rs  range.rs  subtask.rs  summary.rs  task.rs  tests.rs
core/parser/markdown/src/range/: end.rs  mod.rs  start.rs
core/parser/markdown/src/tests/: oroad.rs
core/renderer/bevy/: Cargo.toml
core/renderer/bevy/examples/: basic_renderer.rs
core/renderer/bevy/src/: bundles.rs  components.rs  events.rs  lib.rs  milestone.rs  resources.rs  roadline_renderer.rs  systems.rs  test_utils.rs
core/renderer/bevy/src/bundles/: dependency.rs  task.rs
core/renderer/bevy/src/bundles/task/: content.rs  tests.rs
core/renderer/bevy/src/bundles/task/content/: status.rs  title.rs
core/renderer/bevy/src/bundles/task/content/status/: completed.rs  in_progress.rs  missed.rs  not_started.rs
core/renderer/bevy/src/bundles/task/tests/: anchor.rs  entities.rs  font.rs  multiple.rs  pipeline.rs  spawner.rs  status.rs  ui.rs  utils.rs
core/renderer/bevy/src/components/: dependency.rs  render_state.rs  selection.rs  task.rs
core/renderer/bevy/src/events/: interactions.rs
core/renderer/bevy/src/events/interactions/: output.rs
core/renderer/bevy/src/events/interactions/output/: task.rs
core/renderer/bevy/src/events/interactions/output/task/: task_selected_for_extern.rs  task_selection_changed.rs
core/renderer/bevy/src/resources/: roadline.rs  selection.rs  util.rs
core/renderer/bevy/src/systems/: click_selection.rs  dependency.rs  task.rs  task_cursor_interaction.rs  task_hover.rs
core/renderer/bevy/src/systems/dependency/: cursor_interaction.rs  spawning.rs
core/renderer/bevy/src/systems/dependency/cursor_interaction/: hovers.rs
core/renderer/bevy/src/systems/task/: cursor_interaction.rs  spawning.rs
core/renderer/bevy/src/systems/task/cursor_interaction/: clicks.rs  hovers.rs
core/renderer/bevy/src/systems/task/cursor_interaction/clicks/: events.rs  test_utils.rs  utils.rs
core/renderer/bevy/src/systems/task/cursor_interaction/clicks/events/: output.rs
core/renderer/bevy/src/systems/task/cursor_interaction/clicks/events/output/: task_selected_for_extern.rs  task_selection_changed.rs
core/renderer/bevy/src/systems/task/cursor_interaction/clicks/utils/: bounds.rs
core/renderer/bevy/src/systems/task/cursor_interaction/hover/tests/: utils.rs
core/representation/: Cargo.toml
core/representation/src/: algebra.rs  arena.rs  frame.rs  frame_graph.rs  graph.rs  grid_algebra.rs  lib.rs  range_algebra.rs  reified.rs  roadline.rs
core/representation/src/algebra/: span.rs
core/representation/src/algebra/span/: date.rs  end.rs  start.rs
core/representation/src/graph/: analysis.rs  mutation.rs  operations.rs  predicate.rs  query.rs  test_utils.rs  tests.rs  traversal.rs
core/representation/src/graph/operations/: analysis.rs  mutation.rs  query.rs  test_utils.rs  tests.rs  traversal.rs
core/representation/src/grid_algebra/: cell.rs  lane.rs  stretch.rs
core/representation/src/range_algebra/: span.rs
core/representation/src/range_algebra/span/: date.rs  start.rs
core/representation/src/reified/: down_cell.rs  down_lane.rs  down_stretch.rs  joint.rs  reified_unit.rs
core/source/github-markdown/: Cargo.toml
core/source/github-markdown/src/: client.rs  error.rs  lib.rs  metadata.rs  parser.rs  tests.rs  url.rs
core/source/github-markdown/src/metadata/: fragment.rs
docs/: README.md
docs/site/: README.md
docs/site/deployment/: README.md
site/: README.md
site/dioxus-bevy/: Cargo.toml  README.md
site/dioxus-bevy/src/: app.rs  config.rs  main.rs
site/dioxus-bevy/src/app/: dioxus_app.rs
site/leptos-bevy/: Cargo.toml  README.md  index.html  roadline-site-leptos-bevy-540dc7d4cdef8d38.js
site/leptos-bevy/assets/: github-markdown.css
site/leptos-bevy/netlify-dist/: index.html  roadline-site-leptos-bevy-b635f51e2a882a06.js
site/leptos-bevy/src/: app.rs  components.rs  examples.rs  lib.rs  main.rs
site/leptos-bevy/src/app/: bevy_app.rs  leptos_app.rs
site/leptos-bevy/src/components/: panes.rs
site/leptos-bevy/src/components/panes/: markdown_renderer.rs
site/leptos-bevy/src/components/sections/: markdown.rs
util/: README.md
util/bevy/dioxus-plugin/: Cargo.toml  README.md
util/bevy/plugins-ext/: Cargo.toml
util/bevy/plugins-ext/src/: lib.rs
util/bevy/type-safe/: Cargo.toml
util/bevy/type-safe/src/: assets.rs  lib.rs  maybe.rs  safe.rs
util/bevy/ui-anchor/: Cargo.toml
util/bevy/ui-anchor/src/: lib.rs
util/roadline/roadline/: Cargo.toml  README.md
util/roadline/roadline/src/: dependency.rs  duration.rs  lib.rs  long_id.rs  short_id.rs  task.rs
util/roadline/roadline/src/dependency/: id.rs
util/roadline/roadline/src/task/: embedded_subtask.rs  id.rs  range.rs  subtask.rs  summary.rs  title.rs
util/roadline/roadline/src/task/range/: end.rs  point_of_reference.rs  start.rs  target_date.rs
util/roadline/roadline/src/task/subtask/: content.rs  id.rs  lead.rs  position.rs  status.rs
