[package]
name = "roadline-site-dioxus-bevy"
version = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
roadline-util = { workspace = true }
roadline-representation-core = { workspace = true }
roadline-bevy-renderer = { workspace = true }
chrono = { workspace = true }
bevy = { workspace = true }
leptos = { workspace = true }
leptos-bevy-canvas = { workspace = true }

[lints]
workspace = true