[package]
name = "bevy-type-safe"
version = { workspace = true }
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2021"
description = "A small bevy plugin for anchoring UI elements to specific points or entities in the world "
license = "MIT"
repository = "https://github.com/TotalKrill/bevy_ui_anchor"
keywords = ["bevy", "ui"]
readme = "README.md"

[dependencies]
thiserror = { workspace = true }

[dependencies.bevy]
workspace = true
default-features = false
features = ["bevy_ui", "bevy_window", "bevy_log"]

[dev-dependencies.bevy]
workspace = true
features = ["bevy_ui_debug", "bevy_ui"]