[package]
name = "bevy-ui-anchor"
version = { workspace = true }
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2021"
description = "A small bevy plugin for anchoring UI elements to specific points or entities in the world "
license = "MIT"
repository = "https://github.com/TotalKrill/bevy_ui_anchor"
keywords = ["bevy", "ui"]
readme = "README.md"

[dependencies.bevy]
version = { workspace = true }
default-features = false
features = ["bevy_ui", "bevy_window", "bevy_log"]

[dev-dependencies.bevy]
version = { workspace = true }
features = ["bevy_ui_debug", "bevy_ui"]